# BitConverter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
include/: bit_converter.h  byte_stream.h  memory_stream.h
src/: bit_converter.cpp  bit_converter.h  byte_stream.cpp  main.cpp  memory_stream.cpp
